# rpgSystem

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
includes/: assassin.h  character.h  colors.h  fighter.h  mage.h  marksman.h
includes/characters/: assassin.h  character.h  fighter.h  mage.h  marksman.h
includes/core/: colors.h  loader.cpp  loader.h
includes/core/attacks/: assassinAttack.h  attack.h  mageAttack.h
includes/manager/: positionManager.h  resourceManager.h
src/: a.out  assassin.cpp  character.cpp  fighter.cpp  mage.cpp  main.cpp  marksman.cpp  natureManipulate.cpp
src/characters/: assassin.cpp  character.cpp  fighter.cpp  mage.cpp  marksman.cpp
src/core/: loader.cpp  natureManipulate.cpp
src/core/attacks/: assassin_a.cpp  fighter_a.cpp  mage_a.cpp  marksman_a.cpp
src/core/attacks/assassin/: assassinAttack.cpp  assassin_a.cpp
src/core/attacks/fighter/: fighter_a.cpp
src/core/attacks/mage/: mageAttack.cpp  mage_a.cpp
src/manager/: positionManager.cpp  resourceManager.cpp
